# hello-world-lambda-image

./: Makefile  README.md  pyproject.toml
app/: Dockerfile  handler.py
concourse/tasks/: build-image.yml  create-image-tags.yml
